Dopplr.com support for Kakuteru, also exposing all of that with hCalendar microformat

--- a/README
+++ b/README
@@ -33,6 +33,7 @@ sudo gem install xml-simple
 sudo gem install mechanize
 sudo gem install BlueCloth
 sudo gem install mofo
+sudo gem install icalendar
 
 == Installation
 
