Quick note for Kakuteru trunk

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+
+Urgent note: the Kakuteru trunk is at the moment way behind the Kakuteru.com - it needs syncing up!
+
 = Kakuteru
 
 Is a Web 3.0 enabled Lifestreamer.
